[package]
name = "sol_1"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_1"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
pyth-sdk = { path = "../../../../pyth-sdk", version = "0.7.0" }
pyth-sdk-solana = { path = "../../../../pyth-sdk-solana", version = "0.7.0" }